--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css"
-        integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH"
-        crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/pure-min.css">
   <link rel="stylesheet" href="https://unpkg.com/purecss@2.1.0/build/grids-responsive-min.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>PARKS, TRAILS, AND MORE</title>
 </head>
@@ -205,10 +203,20 @@
         </div>
       </section>
     </div>
-  </div>
-</div>
 
+        <div class="pure-u-1 pure-u-md-1-2">
+          <a href="https://imgur.com/BjwEOoI">
+            <img alt="Picture of board games" class="pure-img-responsive"
+                 src="https://i.imgur.com/BjwEOoI.jpg?1" title="source: imgur.com"/>
+          </a>
 
+          <div class="post-image-meta">
+            <h3>board games</h3>
+
+          </div>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
