Added description to body and image.

--- a/horrified.html
+++ b/horrified.html
@@ -102,7 +102,7 @@
                 <li class="pure-menu-item"><a href="parks.html" class="pure-menu-link">Parks</a></li>
                 <li class="pure-menu-item"><a href="trails.html" class="pure-menu-link">Trails</a></li>
                 <li class="pure-menu-item"><a href="sheriff.html" class="pure-menu-link">Sheriff</a></li>
-                <li class="pure-menu-item"><a href="about-author.html" class="pure-menu-link">About Author</a></li>
+                <li class="pure-menu-item"><a href="about-author.html" class="pure-menu-link">Author</a></li>
             </ul>
         </div>
     </div>
@@ -199,7 +199,8 @@
                         of difficulty, making it the players choice how many monsters at minimum haunt and stalk the
                         townspeople that inhabit the board game. Each creature has their own unique ability and instructions
                         how to defeat them. This is a great game to play yearly but even more special during the month
-                        of October. This is a great co-op game but can be played on solo mode, albeit, challenging! This is
+                        of October. This is a great co-op game with a maximum of five (5) players
+                        but can be played on solo mode, albeit, challenging! This is
                         suitable for ages ten (10) and up, and it takes approximately sixty (60) minutes to complete.
                     </p>
                 </div>
