--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <li class="pure-menu-item"><a href="parks.html" class="pure-menu-link">Parks</a></li>
         <li class="pure-menu-item"><a href="trails.html" class="pure-menu-link">Trails</a></li>
         <li class="pure-menu-item"><a href="sheriff.html" class="pure-menu-link">Sheriff</a></li>
-        <li class="pure-menu-item"><a href="about-author.html" class="pure-menu-link">About Author</a></li>
+        <li class="pure-menu-item"><a href="about-author.html" class="pure-menu-link">Author</a></li>
       </ul>
     </div>
   </div>
