--- a/sheriff.html
+++ b/sheriff.html
@@ -102,7 +102,7 @@
                 <li class="pure-menu-item"><a href="parks.html" class="pure-menu-link">Parks</a></li>
                 <li class="pure-menu-item"><a href="trails.html" class="pure-menu-link">Trails</a></li>
                 <li class="pure-menu-item"><a href="sheriff.html" class="pure-menu-link">Sheriff</a></li>
-                <li class="pure-menu-item"><a href="about-author.html" class="pure-menu-link">About Author</a></li>
+                <li class="pure-menu-item"><a href="about-author.html" class="pure-menu-link">Author</a></li>
             </ul>
         </div>
     </div>
@@ -198,7 +198,7 @@
                         possible. And the merchant with the most wealth wins! Players can take the easy route to gaining wealth
                         by only delivering legal goods (e.g. bread, chicken, and apples), or smuggling higher priced illicit goods.
                         This game puts a player's ability to bluff, persuade, and negotiate to the test, and not everyone
-                        can triumph smuggling contraband. <i>Sheriff of Nottingham</i> is the perfect party game with five
+                        can triumph smuggling contraband. <i>Sheriff of Nottingham</i> is the perfect party game with five (5)
                         players and appropriate for audiences 14 and older, with a completion time of sixty (60) minutes.
 
                     </p>
