--- a/trails.html
+++ b/trails.html
@@ -102,7 +102,7 @@
                 <li class="pure-menu-item"><a href="parks.html" class="pure-menu-link">Parks</a></li>
                 <li class="pure-menu-item"><a href="trails.html" class="pure-menu-link">Trails</a></li>
                 <li class="pure-menu-item"><a href="sheriff.html" class="pure-menu-link">Sheriff</a></li>
-                <li class="pure-menu-item"><a href="about-author.html" class="pure-menu-link">About Author</a></li>
+                <li class="pure-menu-item"><a href="about-author.html" class="pure-menu-link">Author</a></li>
             </ul>
         </div>
     </div>
@@ -201,9 +201,8 @@
                         the Trail sites grant more powerful actions. Once the Sun leaves the trail, the last round occurs,
                         allowing players to collect points once before the end of game. The player with the most points win!
                         <i>TRAILS'</i> minimalistic premise and game design is easily assembled and enjoyed by two to four
-                        players and easily transportable without the bulkiness of a standard board game. It's theme of
-                        adventure and nature is reminiscent of the real world experience that makes you long for the actual
-                        moment.
+                        players and easily transportable without the bulkiness of a standard board game. It is suitable for ages
+                        10 and up and two (2) to four (4) players.
                     </p>
                 </div>
             </section>
