Added description to body and image.

--- a/trails.html
+++ b/trails.html
@@ -209,9 +209,9 @@
         </div>
 
         <div class="pure-u-1 pure-u-md-1-2">
-            <a href="https://imgur.com/2Xul99t">
+            <a href="https://imgur.com/fiwYrT1">
                 <img alt="Picture of Trails board game" class="pure-img-responsive"
-                     src="https://i.imgur.com/2Xul99t.jpg" title="source: imgur.com" />
+                     src="https://i.imgur.com/fiwYrT1.jpg" title="source: imgur.com" />
             </a>
             <div class="post-image-meta">
                 <h3>B.E.</h3>
